src/pages/recipes/recipe/recipe.scss
.inner-recipe-page {
  display: flex;
  justify-content: space-evenly;

  .recipe-left {
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;

    .recipe-img {
      width: 45vw;
      height: 25vh;
      padding-top: 12%;
      margin-bottom: 10%;
    }

    .recipe-instructions {
      width: 45vw;
      font-size: 4vw;
      line-height: 210%;
      align-self: center;
      margin-top: 0;
      margin-bottom: 5px;
    }
  }

  .recipe-right {
    display: flex;
    flex-direction: column;
    width: 50%;
    height: 40%;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

    .ingredients-title {
      padding-top: 5%;
    }

    .recipe-list {
      width: 90%;
      display: flex;
      justify-content: space-between;
      align-items: space-between;
      margin-bottom: 10px;

      .list-items {
        width: 101%;
        word-wrap: break-word;
        text-align: center;

        .list-id {
          display: none;
        }
        .list-item {
          text-align: center;
          .item-inner {
            .input-wrapper {
              .label {
                white-space: normal;
              }
            }
          }
        }
        .list-price {
          text-align: center;
        }
      }

      .button-div {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;

        .list-button {
          width: 50%;
          font-size: 80%;
          background: white;
          color: black;
          border: 1px solid black;
        }
      }
    }
  }
}

